- uploading user is now checked if he/she actually may update a existing sinner
- added a SetUserRole-Call, so that Admins can set roles (like other Admins or "ArchetypeAdmin or whatever")
- added the ability to create a group (with name)
- found a bug that prevented uploading for none-admins (damn - I'm just used to have all the rights...)

Application Changes:

- removed the #ifdebug-braces, so that the SINners-Tab will be visible in release (SinnerSearch-Menuitem is still returning null in Release)
- fixed a bug that deleted the freshly downloaded characterfile while loading the charfile (yes, I was confused as well)
- after the Post of the metadata, now the actual file is uploaded as well in the SINnersBasic-Tab
- added a check, if a character is already uploaded before enabling the "open group dialog"-button
- Runtime now allows (or should allow) code from remote sources (plugin-dlls are not loaded otherwise under Windows-UAC)
- Globaloptions now saves which plugins are enabled in the registry
- Changing the URL of the Chummerhub-Repository in the options no longer crashes the program.
- refractored the CharacterTreeNodes, to support Groups in the frmCharacterRoster (not finished yet)
- hopefully fixed a IndexOutOfRangeException, that would occur when saving the options from the sinner-optionsdialog.
- searchdialog prototyped and search implemented
- Id of SINnerVisibility is now generated and not reused from the options for each Sinner (DuplicateKeyError)
- added a post prior to creating a new group, so the current sinner can be added automatically
- added the ability to create a group.
- added a "Archetype"-Checkbox for ArchetypeAdmins only (including a name)

Build 1.0.0.1

WebService Changes:

- added some telemetry data events and traces (only into the WebServer - no phoneing home in the client)